--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         
          <!-- Footer-->
         <footer class="py-5 bg-dark" style="margin-top: 20px;">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Regita (117220037) 2025</p></div>
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy;  2025</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
